# navel

./: .gitignore  .mypy.ini  .navel.yml  LICENSE  README.md  pyproject.toml  tox.ini
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
navel/: __main__.py  cli.py  errors.py  initialization.py  linter.py  models.py  parsing.py
navel/caching/: file_manager.py
navel/yaml_expr/: __init__.py  glob.py  regex.py  settings.py  xpath.py  yaml_expr.py
tests/integration/: test_initialization_integration.py  test_parsing_integration.py
tests/unit/: test_parsing.py
