[tool.poetry]
name = "navel"
version = "0.1.0"
description = "Python linting through AST expressions"
authors = ["Antonín Kříž <15214494+antoninkriz@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/antoninkriz/navel"
repository = "https://github.com/antoninkriz/navel"


[tool.poetry.scripts]
navel = "navel.__main__:__main__"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.8"
pyastgrep = "^1.3.1"
pyyaml = "^6.0"
lxml = "^4.8"
click = "^8.0"


[tool.poetry.group.dev.dependencies]
tox = "^4.6.4"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
black = "^23.7.0"
mypy = "^1.4.1"
pylint = "^2.17.5"
lxml-stubs = "^0.4.0"
types-pyyaml = "^6.0.12.11"
isort = "^5.12.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']


[tool.pylint.main]
extension-pkg-allow-list = ["lxml.etree"]
jobs = 0


[tool.pylint.classes]
exclude-protected = [
    "lxml.etree._Element"
]


[tool.pylint.messages_control]
max-line-length = 120


[tool.pylint.design]
max-returns = 8
max-locals = 20
min-public-methods = 1
